deploy/k8s-templates/ingress.yaml
# One public load balancer for the whole application. Each path is a routing rule:
@@ROUTES@@
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: @@NS@@
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
@@PATHS@@
